<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Question10">


    <Button
        android:id="@+id/prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/step_activ"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:enabled="true"
        android:text="@string/money_10"
        android:onClick="prizemoney"
        />

    <Button
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prize"
        android:background="@drawable/ans_black"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:enabled="true"
        android:text="@string/q10"
        />

    <Button
        android:id="@+id/ansA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        android:background="@drawable/ans_black"
        android:layout_marginTop="50dp"
        android:onClick="submit"
        android:text="@string/q10a1"
        />


    <Button
        android:id="@+id/ansB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ansA"
        android:background="@drawable/ans_black"
        android:text="@string/q10a2"
        android:onClick="submit"/>


    <Button
        android:id="@+id/ansC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ansB"
        android:background="@drawable/ans_black"
        android:text="@string/q10a3"
        android:onClick="submit"  />


    <Button
        android:id="@+id/ansD"
        android:background="@drawable/ans_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ansC"
        android:text="@string/q10a4"
        android:onClick="submit"  />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Proceed"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColorHighlight="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="goto_next_result"/>


</android.support.constraint.ConstraintLayout>